apps/base/zigbee2mqtt/zigbee2mqtt-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: zigbee2mqtt-ingressroute
  namespace: zigbee2mqtt
  annotations:
    gethomepage.dev/href: "https://${SUBDOMAIN:=zigbee2mqtt}.hephaestus.markmk.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "zigbee2mqtt"
    gethomepage.dev/description: "Zigbee to MQTT bridge."
    gethomepage.dev/app: zigbee2mqtt
    gethomepage.dev/group: "Automation"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/selfhst/icons/svg/zigbee2mqtt.svg"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`${SUBDOMAIN:=zigbee2mqtt}.hephaestus.markmk.com`)
      kind: Rule
      services:
        - name: zigbee2mqtt
          port: 80
